examples/negative/pub_enforcement/priv_field_external_read/main.kai
# Negative fixture (priv-fields lane): reading a `priv` record
# field from outside the declaring module is rejected by the
# post-typing field-privacy walker.

import lib

fn main() : Int = {
  let b = lib.make_box(42)
  b.secret    # ← reject: `secret` is priv in module `lib`
}
